# pac-man

./: Makefile  README.md  config.json  pyproject.toml
resources/shaders/: distortion.fs  lighting.fs  lighting.vs  shadowmap.fs
resources/textures/characters/: start.xcf
src/: character.py  components.py  config.py  enums.py  graphics.py  multiplayer.py  pac-man.py  pacgums.py  pathfinding.py  rlights.py  scenes.py
