[project]
name = "pac-man"
version = "1.0.0"
authors = [
  { name="julcleme", email="julcleme@student.42lyon.fr" },
  { name="sservant", email="sservant@student.42lyon.fr" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8",
    "mypy",
    "numpy",
    "pydantic",
    "raylib",
    "pyinstaller"
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/pac-man/sservant"


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true